@@ -64,3 +64,4 @@ v<0.3.3>, <07/23/2023> -- Added gamgmm threshold
 v<0.3.3>, <07/30/2023> -- Updated all thresholders to accept multiple detector score sets
 v<0.3.3>, <07/30/2023> -- New benchmarking for multiple score sets
 v<0.3.3>, <08/03/2023> -- Added time complexity to benchmark
+v<0.3.4>, <09/01/2023> -- FrechetMean hot fix for karch
